# dolibarr_python_api_public

./: .gitignore  .pre-commit-config.yaml  README.md  calculate-complexity-and-cost.sh  pyproject.toml
.github/workflows/: lint_python.yml
config/: enums.py
scripts/: change-prices.py  delete-latest-added-customer-invoice.py  delete-latest-added-customer-order-and-invoice.py  delete-latest-added-customer-order.py  delete-latest-added-product.py  delete-latest-added-supplier-invoice.py  delete-latest-added-supplier-order.py  delete-latest-added-thirdparty.py  enrich_from_all_suppliers.py  fix-missing-currency.py  fix-missing-external_ref.py  fix-missing-multiprice1.py  fix-missing-time-estimates.py  generate-dolibarr-yearly-report-statement-2024.py  generate-upwork-accounting-transactions.py  import-all-orders-and-invoices.py  import-bt-product.py  import-bt-purchase.py  import-cg-product.py  import-csn-orders.py  import-csn-product.py  import-ct-product.py  import-jo-orders.py  import-jo-product.py  import-jv-product.py  import-ms-excel-invoice.py  import-ms-product.py  import-nt-product.py  import-sello-orders.py  import-sh-orders_and_invoices.py  import-sh-product.py  import-upwork-transactions.py  ms-most-sold.py  overview_of_all_suppliers.py  overview_of_supplier.py  populate-has_address-extrafield.py  python-template.py  restock-overview.py  run_all_tests.sh
src/: my_base_class.py
src/controllers/: my_base_contr.py  thirdparty.py
src/controllers/dolibarr/: product.py
src/controllers/dolibarr/customer/: invoice.py  order.py  payment.py
src/controllers/dolibarr/supplier/: invoice.py  order.py  payment.py
src/controllers/marketplaces/sello/: order.py  orders.py
src/controllers/supplier/: cart.py  login.py
src/controllers/suppliers/csn/: login.py
src/controllers/suppliers/ms/: cart.py  login.py
src/helpers/: curl.py  enums.py  exports.py  pyperclip.py  utilities.py
src/helpers/crud/: create.py  delete.py  postgres.py  read.py  update.py
src/interfaces/: reference.py
src/models/: exceptions.py  thirdparty.py  vat_rate.py
src/models/basemodels/: my_base_model.py  shimano.py
src/models/dolibarr/: entity.py  enums.py  line.py  my_dolibarr_api.py  product.py  service.py
src/models/dolibarr/accounting/: report.py
src/models/dolibarr/customer/: invoice.py  invoice_line.py  order.py  payment.py
src/models/dolibarr/supplier/: invoice.py  invoice_line.py  order.py  order_line.py  payment.py
src/models/marketplaces/sello/: enums.py  order.py  order_row.py  orders.py  product.py  products.py
src/models/supplier/: base_url.py  cart_response.py  entity.py  enums.py  order_row.py  orders.py  service.py
src/models/supplier/order/: eu_order.py
src/models/supplier/product/: bike_product.py  eu_bike_product.py  sek_bike_product.py
src/models/suppliers/: enums.py
src/models/suppliers/bikable/: order.py  order_row.py  product.py
src/models/suppliers/biltema/: order.py  order_row.py  product.py
src/models/suppliers/cycleservicenordic/: order.py  (+3 more)
src/views/: my_base_view.py
src/views/dolibarr/: entities.py  product.py
test_data/: dolibarr_product_test_v14.json  ms-test-invoice.xlsx  shimano-product-flattened.json  shimano-product-unflattened.json  test.base64
test_data/csn/: order.json
test_data/hoj24/: orders_data.json
tests/: test_entities.py  test_enums.py  test_postgresql.py  test_report.py
tests/controllers/dolibarr/: test_product.py
tests/deprecated/: test_bikester_product.py  test_cycletech_product.py  test_cykelgear_product.py  test_jofrab_invoice.py  test_jofrab_order.py  test_jofrab_product.py  test_nivatex.py
tests/deprecated/sello/: test_sello_order.py  test_sello_order_row.py  test_sello_orders.py  test_sello_products.py
tests/deprecated/upwork/: test___init__.py  test_accounting.py  test_upwork_transaction.py
tests/models/dolibarr/: test_dolibarr_product.py  test_dolibarr_supplier.py  test_dolibarr_supplier_order.py  test_entities.py  test_order_line.py  test_read.py  test_thirdparty.py  test_upload.py
tests/supplier/: test_supplier_order.py  test_supplier_order_row.py  test_supplier_product.py
tests/suppliers/bikable/: test_product.py
tests/suppliers/biltema/: test_order.py  test_product.py
tests/suppliers/cycleservicenordic/: test_order.py  test_product.py
tests/suppliers/hoj24/: test_login.py  test_order.py  test_order_row.py  test_orders.py  test_product.py
tests/suppliers/messingschlager/: test_order.py  test_product.py
tests/suppliers/shimano/: test_pdfplumber.py  test_product_endpoint.py  test_search_endpoint.py  test_shimano_login.py  test_shimano_options.py  test_shimano_pricelist.py  test_shimano_product.py
tests/views/dolibarr/: test_product.py
(+32 files in other folders)
